--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>mah portfolio</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>My First Good Heading</h1>
+<img src="cat.jpg" alt="a cat">
+
+<p>
+<a href="another-cat.html">click meh</a>
+</p>
+
+<p>
+<a href="banana-jam.html">banana meh</a>
+</p>
+
+<p>My first paragraph.</p>
 
 </body>
 </html> 
